# semi

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  configure
cmake/: SEMIDeps.txt
docs/: Doxyfile.in  DoxygenLayout.xml
src/: main.cpp
src/io/: CMakeLists.txt  Makefile  io_get_input.cpp  io_get_input.h  io_input_section.cpp  io_input_section.h  io_molecule.cpp  io_molecule.h  io_utils.cpp  io_utils.h
src/semi/: Atom.cpp  Atom.h  Basis.cpp  Basis.h  BasisSet.cpp  BasisSet.h  CGTOBasis.cpp  CGTOBasis.h  CMakeLists.txt  GTOBasis.cpp  GTOBasis.h  Makefile  Molecule.cpp  Molecule.h  QNumber.cpp  QNumber.h  STOBasis.cpp  STOBasis.h  cmake_install.cmake  cndo.h  cndo2.cpp  cndo2.h  get_sto_3g.cpp  get_sto_3g.h  input.in  parameters.h  run_cndo.cpp  run_cndo.h  run_huckel.cpp  run_huckel.h  run_scf.cpp  run_scf.h  scf.cpp  scf.h  semi_api.cpp  semi_api.h  semi_input.h  semi_method.h  semi_output.h  semi_utils.cpp  (+3 more)
src/semi/Basis/: BasisSet.cpp  BasisSet.h  CGTOFunction.cpp  CGTOFunction.h  GTOFunction.cpp  GTOFunction.h  STOFunction.cpp  STOFunction.h  get_sto_3g.cpp  get_sto_3g.h
src/semi/Huckel/: HuckelBasis.cpp  HuckelBasis.h  HuckelConstructor.cpp  HuckelConstructor.h  HuckelMethod.cpp  HuckelMethod.h  HuckelSolver.cpp  HuckelSolver.h  huckel.cpp  huckel.h
src/semi/Integral/: Cndo.cpp  Cndo.h  IntegralEvaluator.cpp  IntegralEvaluator.h
src/semi/Structure/: Atom.cpp  Atom.h  Molecule.cpp  Molecule.h  QNumber.cpp
tests/: CMakeLists.txt  Makefile  VOIE.txt  arma_test.cpp  benzene.txt  bh.txt  cgto_test.cpp  cndo_test.cpp  cobly2.txt  colby1.txt  colby2.txt  corot.txt  framework_test.cpp  h2.txt  huckel_test.cpp  input.in  io_utils_test.cpp  methane.txt  methane_overlap.txt  o2.txt  o2rot.txt  oh.txt  output.out  s.txt  semi_test.cpp  sto-3g.txt  sto_test.cpp  sto_vs_cgto_test.cpp
tests/Input/: huckel.in  input.in  input2.in
tests/xyz/: co.txt  lih.txt
